  * Update label of named boxes on palette when name changes.
  * Added Named Do Blocks.
  * Fixed regression in restoring plugins from local storage.
  * Properly position and scale text exported to SVG.
  * Restored delete all button to secondary menu (yes, you can do the
    same thing from the planet, but that is often inconvenient).
  * Fixed problem with bad URL in planet (Ignacio Rodriguez).
  * Restored image click in planet.

0.6
  * i18n for planet (Ignacio)
  * setfont block (Abhinav Anurag)
  * Set default font to 'sans-serif' (w/Sam Parkinson).

TODO:
  * Make standalone do blocks (similar to standalone boxes)
  * Save errors
  * Display rubrics
  * More efficient until and while?
  * Save to javascript
  * Rtl support
  * Zoom and scroll?
  * Use graphical error messages
  * Make expand an array, one element for each arg or slot
  * User-defined block types (trivial with factory)
  * Three-arg arg blocks (trivial with factory)
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?
  * Better interoperability with Python version
  * Sugar datastore/toolbar support

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?) Note that
    we can use turtlename to create instance variables.
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays

KNOWN BUGS:
  * Find a scalable approach to drawing on the canvas
  * Not all blocks highlight when using step-by-step mode
  * Camera doesn't work on Android
  * Music block doesn't work on Android
  * Cannot open plugins loader on Android
  * Sometimes returning to backgrounded project results in empty project
  * Two-arg blocks don't expand on load.
  * Bad/missing thumbnails break the Planet.
  * Loading macros there is a funny collapsed state sometimes.